<resources>
    <string name="app_name">POSitive-Retail</string>

    <string name="app_setup">KIOSK SETUP</string>
    <string name="label_host_name">HOST NAME</string>
    <string name="hint_host_name">Host name</string>
    <string name="label_company">COMPANY</string>
    <string name="hint_company">Company</string>
    <string name="label_code">CODE</string>
    <string name="hint_code">Code</string>
    <string name="label_product_key">PRODUCT KEY</string>
    <string name="button_label_confirm">CONFIRM</string>
    <string name="hint_product_key">Product key</string>
    <string name="general_progress_text">Loading.. please wait</string>
    <string name="error_message_fill_up_all_fields">Please fill up all fields</string>
    <string name="no_item_to_discount">No item to discount</string>
    <string name="no_item_to_discount_disc_exempt">All items selected are discount exempted</string>
    <string name="text_header_error">Error</string>
    <string name="error_message_invalid_url">Invalid url</string>
    <string name="header_message">Message</string>
    <string name="error_no_usernamepassword">Please provide your username and password</string>
    <string name="error_message_data_not_sync">You still have unsynced data</string>

    <string-array name="test">
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
    </string-array>
    <string name="title_activity_resume_transaction">ResumeTransactionActivity</string>
    <string name="info_no_data">No Data</string>
    <string name="label_username">Username</string>
    <string name="label_password">Password</string>
    <string name="hint_password">123456</string>
    <string name="hint_username">abc123</string>
    <string name="item_void_password_dialog">CONFIRM ITEM VOID</string>
    <string name="label_quantity">Change Quantity</string>
    <string name="hint_quantity">Enter new quantity</string>
    <string name="dialog_header_change_qty">Change quantity</string>
    <string name="error_zero_quantity">Cannot enter 0 quantity</string>
    <string name="error_no_transaction">No transaction for payment</string>
    <string name="error_no_items">No items for payment</string>

    <string name="error_no_transaction_disc">No transaction for discount</string>

    <string name="error_no_transaction_cutoff">No transaction for cutoff</string>

    <string name="error_no_items_disc">No items for discount</string>

    <string name="error_has_balance">Please settle your remaining balance</string>
    <string name="transaction_completed">Transaction completed</string>
    <string name="title_completed_transactions">Completed Transactions</string>
    <string name="hint_name">Enter name</string>
    <string name="search_title">Search here</string>
    <string name="button_xreading">X READING</string>
    <string name="button_reprint_z_reading">REPRINT Z READING</string>
    <string name="button_reprint_x_reading">REPRINT X READING</string>
    <string name="button_z_reading">Z READING</string>
    <string name="header_discount_selection">SELECT DISCOUNT</string>
    <string name="hint_card_number">12345</string>
    <string name="label_osca_senior_pwd_number">OSCA/SENIOR/PWD NUMBER</string>
    <string name="label_name">NAME</string>
    <string name="label_address">ADDRESS</string>
    <string name="hint_enter_address">Enter Address</string>
    <string name="header_custom">Custom</string>
    <string name="error_no_cut_off_to_end_of_day">No Cutoff to End of day</string>
    <string name="title_reprint_transactions">Reprint Transactions</string>


    <string name="printerseries_m10">TM-m10 Series</string>
    <string name="printerseries_m30">TM-m30 Series</string>
    <string name="printerseries_p20">TM-P20 Series</string>
    <string name="printerseries_p60">TM-P60 Series</string>
    <string name="printerseries_p60ii">TM-P60II Series</string>
    <string name="printerseries_p80">TM-P80 Series</string>
    <string name="printerseries_t20">TM-T20 Series</string>
    <string name="printerseries_t70">TM-T70 Series</string>
    <string name="printerseries_t81">TM-T81 Series</string>
    <string name="printerseries_t82">TM-T82 Series</string>
    <string name="printerseries_t83">TM-T83 Series</string>
    <string name="printerseries_t88">TM-T88 Series</string>
    <string name="printerseries_t90">TM-T90 Series</string>
    <string name="printerseries_t90kp">TM-T90KP Series</string>
    <string name="printerseries_u220">TM-U220 Series</string>
    <string name="printerseries_u330">TM-U330 Series</string>
    <string name="printerseries_l90">TM-L90 Series</string>
    <string name="printerseries_h6000">TM-H6000 Series</string>
    <string name="lang_ank">ANK</string>
    <string name="lang_japanese">JAPANESE</string>
    <string name="lang_chinese">CHINESE</string>
    <string name="lang_taiwan">TAIWAN</string>
    <string name="lang_korean">KOREAN</string>
    <string name="lang_thai">THAI</string>
    <string name="lang_southasia">SOUTH ASIA</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_rooms">Rooms</string>
    <string name="error_select_card">Please select type of card</string>
    <string name="label_date_from">Starting Date</string>
    <string name="label_date_to">Ending Date</string>
    <string name="label_value">Value</string>
    <string name="hint_amount_percentage">Enter Value</string>
    <string name="message_or_details_success">OR Details successfully saved</string>
    <string name="label_card_number">CARD NUMBER</string>
    <string name="error_card_number_required">Card number is always required</string>
    <string name="hint_enter_card_number">Enter card number</string>
    <string name="hint_enter_name">Enter name</string>
    <string name="hint_enter_username">Enter username</string>
    <string name="hint_enter_password">Enter password</string>
    <string name="title_activity_orders">Orders</string>
    <string name="hint_node_http_url">Node http url</string>
</resources>
