<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/partial_header" android:id="@+id/header" />

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/spinnerDiscounts"
        android:layout_margin="10dp"
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvCardNumber"
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_card_number"/>

    <com.nerdvana.positiveoffline.view.HidingEditText
        android:id="@+id/etCardNumber"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="10dp"
        android:background="@drawable/edittext_round"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_card_number"/>

    <TextView
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_name"/>

    <com.nerdvana.positiveoffline.view.HidingEditText
        android:id="@+id/etName"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="10dp"
        android:background="@drawable/edittext_round"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"/>

    <TextView
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_address"/>

    <com.nerdvana.positiveoffline.view.HidingEditText
        android:id="@+id/etAddress"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:padding="10dp"
        android:background="@drawable/edittext_round"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_enter_address"/>

    <Button
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/button_selector"
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_label_confirm"/>

</LinearLayout>