<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/partial_header" />

    <Button
        android:id="@+id/btnXReading"
        android:textColor="@color/colorWhite"
        android:layout_margin="10dp"
        android:text="@string/button_xreading"
        android:background="@drawable/button_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnZReading"
        android:textColor="@color/colorWhite"
        android:layout_margin="10dp"
        android:text="@string/button_z_reading"
        android:background="@drawable/button_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnReprintXRead"
        android:textColor="@color/colorWhite"
        android:layout_margin="10dp"
        android:text="@string/button_reprint_x_reading"
        android:background="@drawable/button_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnReprintZRead"
        android:textColor="@color/colorWhite"
        android:layout_margin="10dp"
        android:text="@string/button_reprint_z_reading"
        android:background="@drawable/button_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>