<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include layout="@layout/partial_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/header"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:id="@+id/tilHostName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <com.nerdvana.positiveoffline.view.HidingEditText
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:id="@+id/etHostName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_host_name"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilHostName"
        android:id="@+id/tilCompany"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <com.nerdvana.positiveoffline.view.HidingEditText
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:id="@+id/etCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_company"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilCompany"
        android:id="@+id/tilCode"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <com.nerdvana.positiveoffline.view.HidingEditText
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:id="@+id/etCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_code"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilCode"
        android:id="@+id/tilProductKey"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content">
        <com.nerdvana.positiveoffline.view.HidingEditText
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:id="@+id/etProductKey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_product_key"/>
    </com.google.android.material.textfield.TextInputLayout>




    <com.nerdvana.positiveoffline.view.ProgressButton
        android:id="@+id/btnConfirm"
        app:textColor="@color/colorBlack"
        android:background="@drawable/button_selector"
        android:layout_margin="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilProductKey"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:text="@string/button_label_confirm"/>

</androidx.constraintlayout.widget.ConstraintLayout>