<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include layout="@layout/partial_header"
        android:id="@+id/header"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@id/header"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/tilUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.nerdvana.positiveoffline.view.HidingEditText
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:id="@+id/etUsername"
            android:padding="10dp"
            android:background="@drawable/edittext_round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_username"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_below="@id/tilUsername"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/tilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.nerdvana.positiveoffline.view.HidingEditText
            android:longClickable="false"
            android:editable="false"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            android:maxLines="1"
            android:id="@+id/etPassword"
            android:padding="10dp"
            android:background="@drawable/edittext_round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_enter_password"/>


    </com.google.android.material.textfield.TextInputLayout>

    <Button

        android:layout_marginRight="17dp"
        android:layout_marginTop="7dp"
        android:id="@+id/btnResetPw"
        android:text="CLEAR"
        android:layout_alignParentRight="true"
        android:layout_below="@id/tilUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <com.nerdvana.positiveoffline.view.ProgressButton
        android:layout_below="@id/tilPassword"
        android:id="@+id/btnConfirm"
        android:textColor="@color/colorWhite"
        app:text="@string/button_label_confirm"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"/>

</RelativeLayout>