<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/partial_header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:id="@+id/header"/>


    <TextView
        android:layout_margin="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_date_from"/>

    <androidx.cardview.widget.CardView
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardElevation="5dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/cardDateStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_margin="10dp"
                android:layout_centerVertical="true"
                android:id="@+id/img"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_calendar"/>
            <TextView
                android:layout_toRightOf="@id/img"
                android:padding="5dp"
                android:layout_margin="10dp"
                android:id="@+id/inputDateStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Start date"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>





    <TextView
        android:layout_margin="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_date_to"/>


    <androidx.cardview.widget.CardView
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardElevation="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/cardDateStart"
        android:id="@+id/cardDateEnd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_margin="10dp"
                android:layout_centerVertical="true"
                android:id="@+id/img1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_calendar"/>
            <TextView
                android:layout_toRightOf="@id/img1"
                android:padding="5dp"
                android:layout_margin="10dp"
                android:id="@+id/inputDateEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="End Date"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnConfirm"
        android:textColor="@color/colorWhite"
        android:text="@string/button_label_confirm"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_selector"/>
</LinearLayout>